Add a new FlawReference API
