# osidb/urls.py
@@ -4,9 +4,11 @@ define urls
 from django.urls import include, path
 from drf_spectacular.views import SpectacularAPIView, SpectacularSwaggerView
 from rest_framework import routers
+from rest_framework_nested.routers import NestedDefaultRouter
 
 from .api_views import (
     AffectView,
+    FlawReferenceView,
     FlawView,
     ManifestView,
     StatusView,
@@ -21,12 +23,16 @@ router.register(r"flaws", FlawView)
 router.register(r"affects", AffectView)
 router.register(r"trackers", TrackerView)
 
+nested_router = NestedDefaultRouter(router, r"flaws", lookup="flaw")
+nested_router.register(r"references", FlawReferenceView)
+
 urlpatterns = [
     path("healthy", healthy),
     path("whoami", whoami),
     path(f"api/{OSIDB_API_VERSION}/status", StatusView.as_view()),
     path(f"api/{OSIDB_API_VERSION}/manifest", ManifestView.as_view()),
     path(f"api/{OSIDB_API_VERSION}/", include(router.urls)),
+    path(f"api/{OSIDB_API_VERSION}/", include(nested_router.urls)),
     path(
         f"api/{OSIDB_API_VERSION}/schema/", SpectacularAPIView.as_view(), name="schema"
     ),
